--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "js-yaml": "^3.12.1"
+  },
+  "scripts": {
+  	"postinstall": "node postinstall.js"
   }
 }
