Put file check back in (for when this is a grandchild or deeper dependency, to prevent error after install)

--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
     "js-yaml": "^3.12.1"
   },
   "scripts": {
-  	"postinstall": "cp $INIT_CWD/pubsub/topics.yaml src"
+  	"postinstall": "[[ -e $INIT_CWD/pubsub/topics.yaml ]] && cp $INIT_CWD/pubsub/topics.yaml src"
   }
 }
