--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "upmentoring-pubsub",
+  "name": "pubsub",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:leanjscom/upmentoring-pubsub.git",
