--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Will Voelcker <wvoelcker@yahoo.co.uk>",
   "license": "MIT",
   "dependencies": {
-    "js-yaml": "^3.12.1"
+    "commander": "^2.19.0",
+    "js-yaml": "^3.12.1",
+    "shelljs": "^0.8.3"
   }
 }
